Add: Multi-OS testing support in Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,19 @@
 sudo: false
-language: python
+language: generic
+matrix:
+  include:
+    - python: 2.7
+      language: python
+      python: "2.7"
+      os: linux
+      env: PYTHON=/usr/bin/python2.7
+    - python: 2
+      os: osx
+      env: PYTHON=/usr/bin/python
+  allow_failures:
+    - os: osx
+before_install:
+  - source .travis.before_install.bash
 install: true
 script: py.test
 notifications:
