--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,6 @@ matrix:
       python: "3.5"
       os: linux
       env: PYTHON=/usr/bin/python3.5
-    - python: 2
-      os: osx
-      env: PYTHON=/usr/bin/python
   allow_failures:
     - os: osx
 before_install:
@@ -22,7 +19,7 @@ before_install:
 after_success:
   - coveralls
 install: true
-script: py.test
+script: coverage py.test
 notifications:
   email:
     on_success: never
