Updated changelog and changed address for travis notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script: py.test --cov vecnet.openmalaria
 notifications:
   email:
     recipients:
-      - avyushko@nd.edu
+      - alex.vyushkov@gmail.com
     on_success: never
     on_failure: always
 deploy:
